# mcp_neo4j_knowledge_graph

./: .gitignore  README.md  Taskfile.yml  docker-compose.yml  example_mcp_config.json  pyproject.toml  wanted-features.md
src/: neo4j_driver.py  server.py  test_mcp_client.py  test_mcp_config.py  test_neo4j_connection.py
src/tools/: __init__.py  create_entities.py  create_relations.py  delete_entities.py  introspect_schema.py  search_entities.py  update_entities.py
tests/: conftest.py
tests/integration/: conftest.py  test_create_entities.py  test_create_relations.py  test_delete_entities.py  test_introspect_schema.py  test_search_entities.py  test_update_entities.py
