[tool.poetry]
name = "neo4j-mcp-server"
version = "0.1.0"
description = "A Memory Control Protocol server implementation using Neo4j as the backend storage for knowledge graph management"
authors = ["Merlin Webster mjftwebster@gmail.com"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
neo4j = "^5.15.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
python-dotenv = "^1.0.1"
mcp = "^1.4.1"
fastmcp = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest-asyncio = "^0.26.0"
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 